# PVI

./: .gitignore  pyproject.toml
app/: main.py
desktop/: launch.py  main_qt.py
infra/: docker-compose.yml
pvi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pvi_core/: inference.py
training/: dataset.py  dataset_check.py  train.py
